Dark theme + localization

--- a/locales/en-US/editor.properties
+++ b/locales/en-US/editor.properties
@@ -143,7 +143,6 @@ DND_SUCCESS_UNTAR=Successfully untarred <b>{0}</b>.
 IMAGE_DIMENSIONS={0} (width) &times; {1} (height) pixels
 
 # Image Filters
-
 IMAGE_FILTERS_TITLE=Image Filter
 IMAGE_FILTER_PINHOLE=Pinhole
 IMAGE_FILTER_SEPIA=Sepia
@@ -155,6 +154,16 @@ IMAGE_FILTER_GLOWING_SUN=Glowing Sun
 IMAGE_SAVE_WITH_FILTERS=Apply
 IMAGE_RESET_FILTERS=Cancel
 
+# Font Viewer
+FONT_FILE=Font File
+USE_FONT_INSTRUCTIONS=To use this font, copy and paste this code into your CSS file.
+FONT_TYPE_NORMAL=Normal
+FONT_TYPE_BOLD=Bold
+FONT_TYPE_ITALIC=Italic
+FONT_BOLD_HTML_TAG=Put text inside <code>&lt;strong&gt;</code><code>&lt;/strong&gt;</code> tag.
+FONT_BOLD_CSS_RULE=Add a <code>font-weight: bold;</code> rule.
+FONT_ITALIC_HTML_TAG=Put text inside <code>&lt;em&gt;</code><code>&lt;/em&gt;</code> tag.
+FONT_ITALIC_CSS_RULE=Add a <code>font-style: italic;</code> rule.
 
 ################
 ## EXTENSIONS ##
